--- a/public/pages/learn.html
+++ b/public/pages/learn.html
@@ -41,7 +41,7 @@
   <meta name="twitter:description" content="Developer Student Clubs (DSC) est un programme présenté par Google Developers. Les DSC sont des groupes communautaires universitaires pour les étudiants de tous les programmes souhaitant être développeurs. En rejoignant le DSC ENSIT, les étudiants approfondissent leurs connaissances dans un environnement d’apprentissage entre pairs et développent des solutions pour les entreprises locales et leur communauté. Développement web et mobile, le Cloud, AI/ML et l'IoT." />
   <meta name="twitter:image:src" content="https://dsc-ensit.web.app/images/dsc.png" />
   <meta name="twitter:image:alt" content="DSC Icon" />
-
+  
   <meta name="google-site-verification" content="BEDcsLZQlqB3FkjmyyoExR__hnNqwv8UVFpjlB3ia-I" />
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-147241121-1"></script>
@@ -68,7 +68,7 @@
         "addressCountry": "Côte d'Ivoire"
       }
     }
-  </script>
+    </script>
   <link rel="canonical" href="https://dsc-ensit.web.app/" />
   <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon" />
   <link rel="icon" href="../images/favicon.png" type="image/png" />
@@ -123,18 +123,215 @@
       </div>
     </div>
   </nav>
-</head>
-  <div class="container">
-    <div class="row align-items-center">
-      <div class="col-12 col-sm-6">
-        <h2 div="err-p">Vous venez de geler?<br> Comme une antilope dans les phares 🤭</h2><br>
-        <a href="../index.html" class=" hero-button event-btn err">Retourner à l'accueil</a>
-      </div>
-      <div class="col-12 col-sm-5 error">
-        <img  class="err-img" src="../images/assets/error.jpg" alt="illustration of error 404 message">
+  <section id="web" class="section-spacer">
+    <header class="section-header text-center">
+      <h2 class="section-title">Partager des expériences et des ressources gratuites</h2>
+    </header>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4 col-12">
+          <div class="card course-card" style="width: 22rem;">
+            <img class="card-img-top" src="../images/assets/courses/intro-js.png" alt="Card image cap">
+            <div class="card-body">
+              <p class="tagging beginner float-right">Débutant</p>
+              <h5 class="card-title">Introduction à JavaScript</h5>
+              <p class="card-text">Apprenez les bases de la syntaxe Javascript. Explorez les bases de JavaScript en apprenant à définir des variables et à utiliser des types de données... En anglais</p>
+              <a href="https://www.udacity.com/course/intro-to-javascript--ud803" class="button float-right" target="_blank" rel="noopener noreferrer">Voir le cours</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 col-12">
+          <div class="card course-card" style="width: 22rem;">
+            <img class="card-img-top" src="../images/assets/courses/kotlin.png" alt="Card image cap">
+            <div class="card-body">
+              <p class="tagging intermediate float-right">Intermediaire</p>
+              <h5 class="card-title">Kotlin pour les développeurs Android</h5>
+              <p class="card-text">Prenez une application de bloc-notes Android et convertissez-la de Java en Kotlin, en apprenant les fonctionnalités clés du langage de programmation Kotlin... En anglais</p>
+              <a href="https://classroom.udacity.com/courses/ud888" class="button float-right" target="_blank" rel="noopener noreferrer">Voir le cours</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 col-12">
+          <div class="card course-card" style="width: 22rem;">
+            <img class="card-img-top" src="../images/assets/courses/best-prac.png" alt="Card image cap">
+            <div class="card-body">
+              <p class="tagging expert float-right">Expert</p>
+              <h5 class="card-title">Meilleures pratiques JavaScript</h5>
+              <p class="card-text"> This course is designed to take your existing JavaScript knowledge and teach you how to leverage patterns and practices to take... En anglais</p>
+              <a href="https://app.pluralsight.com/player?course=javascript-best-practices&author=jonathan-mills&name=javascript-best-practices" class="button float-right" target="_blank" rel="noopener noreferrer">Voir le cours</a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
+  </section>
+
+  <footer class="section-spacer footer-section">
+    <div class="container">
+      <div class="row flex-column-reverse flex-sm-row flex-lg-row">
+        <div class="col-md-4 col-12">
+          <div class="footer-widget first-of-footer-widget">
+            <img data-src="../images/DSC_ENSIT_Logo.png" class="logo-sm mb-10 mt-0" alt="DSC ENSIT footer logo">
+            <p class="mt-0">&copy; <script>document.write(new Date().getFullYear())</script> | Tous droits réservés.</p>
+            <span>N'hésitez pas à nous envoyer un email: </span>
+            <a href="mailto:dscensit@gmail.com">dscensit@gmail.com</a>
+            <ul class="social-list__inline mt-10">
+              <li>
+                <a href="https://twitter.com/DscEnsit" target="_blank" rel="noopener" aria-label="page twitter">
+                  <i class="fab fa-twitter"></i>
+                </a>
+              </li>
+              <li>
+                <a href="#" target="_blank" rel="noopener" aria-label="page github">
+                  <i class="fab fa-github"></i>
+                </a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/user/GoogleDevelopers"target="_blank" rel="noopener" aria-label="page youtube">
+                  <i class="fab fa-youtube"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-md-8 col-sm-10">
+          <div class="row">
+            <div class="col-md-4 col-6">
+              <div class="footer-widget">
+                <h4 class="footer-widget__title">Programmes</h4>
+                <ul class="list-unstyled">
+                  <li>
+                    <a href="https://www.womentechmakers.com/" target="_blank" rel="noreferrer">Women Techmakers</a>
+                  </li>
+                  <li>
+                    <a href="https://developers.google.com/experts/" target="_blank" rel="noreferrer">Google Developer Experts</a>
+                  </li>
+                  <li>
+                    <a href="https://developers.google.com/programs/community/" target="_blank" rel="noreferrer">Google Developer Groups</a>
+                  </li>
+                  <li>
+                    <a href="https://developers.google.com/community/launchpad/" target="_blank" rel="noreferrer">Launchpad</a>
+                  </li>
+                  <li>
+                    <a href="https://developers.google.com/community/dsc/" target="_blank" rel="noreferrer">Developer Student Clubs</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-md-4 col-6">
+              <div class="footer-widget">
+                <h4 class="footer-widget__title">Développeurs</h4>
+                  <ul class="list-unstyled">
+                    <li>
+                      <a href="https://developer.chrome.com/home" target="_blank" rel="noreferrer">Chrome</a>
+                    </li>
+                    <li>
+                      <a href="https://developer.android.com/index.html" target="_blank" rel="noreferrer">Android</a>
+                    </li>
+                    <li>
+                      <a href="https://firebase.google.com/" target="_blank" rel="noreferrer">Firebase</a>
+                    </li>
+                    <li>
+                      <a href="https://cloud.google.com/" target="_blank" rel="noreferrer">Google Cloud Platform</a>
+                    </li>
+                    <li>
+                      <a href="https://developers.google.com/actions/" target="_blank" rel="noreferrer">Actions on Google</a>
+                    </li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="footer-widget">
+                <h4 class="footer-widget__title">Contribuer</h4>
+                <ul class="list-unstyled">
+                  <li>
+                    <a href="https://github.com/DSCEksu/dsceksu/issues/new?template=documentation-bug.md" target="_blank" rel="noreferrer">Déposer un bug</a>
+                  </li>
+                  <li>
+                    <a href="https://github.com/DSCEksu/dsceksu" target="_blank" rel="noreferrer">Voir la source</a>
+                  </li>
+                  <li>
+                    <a href="javascript:;" onclick="share('DSC ENSIT', 'https://dsc-ensit.web.app', 'En rejoignant le DSC ENSIT, les étudiants approfondissent leurs connaissances dans un environnement de travaille harmonieux entre pairs et développent des solutions pour les entreprises locales et leur communauté.')"><i class="fa fa-share"></i> Partager</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <a href="#" id="scroll" style="display: none;" aria-label="Allez en haut"><i class="fas fa-angle-up"></i></a>
+  
+  <script>
+    ;function imageIntersectionObserverCallback(imageEntries, observer) {
+      imageEntries.forEach(imgEntry => {
+        if (imgEntry.isIntersecting) {
+          imgEntry.target.setAttribute('src', imgEntry.target.dataset.src);
+          observer.unobserve(imgEntry.target);
+        }
+      })
+    }
+    const imageObserver = new IntersectionObserver(imageIntersectionObserverCallback, { rootMargin: '30px 0px' });
+    imageObserver.POLL_INTERVAL = 200;
+    imageObserver.USE_MUTATION_OBSERVER = false;
+    document.querySelectorAll('img[data-src]').forEach(img => {
+      imageObserver.observe(img);
+    })
+  </script>
+  <script>
+
+    async function share(title, url, text) {
+      if (window.Windows) {
+        const DataTransferManager = window.Windows.ApplicationModel.DataTransfer.DataTransferManager;
+
+        const dataTransferManager = DataTransferManager.getForCurrentView();
+        dataTransferManager.addEventListener("datarequested", (ev) => {
+          const data = ev.request.data;
+
+          data.properties.title = title;
+          data.properties.url = url;
+          data.setText(text);
+        });
+
+        DataTransferManager.showShareUI();
+
+        return true;
+      } else if (navigator.share) {
+        try {
+          await navigator.share({
+            title: title,
+            url: url,
+            text: text,
+          });
+
+          return true;
+        } catch (err) {
+          console.error('There was an error trying to share this content');
+          return false;
+        }
+      }
+    }
+  </script>
+  <script>
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', () => {
+        navigator.serviceWorker.register('../sw.js')
+          .then(registration => {
+            console.log(`Service Worker registered! Scope: ${registration.scope}`);
+          })
+          .catch(err => {
+            console.log(`Service Worker registration failed: ${err}`);
+          });
+      });
+    }
+  </script>
   <script src="../js/vendors/pace.js"></script>
+  <script src="../js/vendors/jquery.min.js"></script>
+  <script src="../js/vendors/bootstrap.bundle.min.js"></script>
+  <script src="../js/vendors/jquery.magnific-popup.min.js"></script>
+  <script src="../js/vendors/jquery.easing.min.js"></script>
+  <script src="../js/vendors/swiper.min.js"></script>
+  <script src="../js/custom.js"></script>
 </body>
 </html>
